[gd_scene load_steps=2 format=2]

[ext_resource path="res://Reused/ReusableSystems/OptionEditor/OptionItem/ItemInput/InputButton/InputButton.gd" type="Script" id=1]

[node name="InputButton" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="IconTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
mouse_filter = 2
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsPopup" type="CanvasLayer" parent="."]

[node name="OptionsMain" type="Control" parent="OptionsPopup"]
visible = false
anchor_right = 0.039
anchor_bottom = 0.067
margin_top = 40.0
margin_right = 0.0639992
margin_bottom = 79.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="PanelContainer" parent="OptionsPopup/OptionsMain"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="OptionsPopup/OptionsMain"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
text = "D"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" type="Button" parent="OptionsPopup/OptionsMain"]
anchor_right = 1.0
anchor_bottom = 0.5
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OpenButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="OptionsPopup/OptionsMain/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="OptionsPopup/OptionsMain/EditButton" to="." method="_on_EditButton_pressed"]
